# emart

./: .gitignore  docker-compose.yaml  manage.py  pyproject.toml
auth/: Dockerfile  alembic.ini  docker-compose.yaml  pyproject.toml  requirements.txt
auth/scripts/: migrate.sh
auth/server/: main.py
auth/server/config/: factory.py
auth/server/config/environments/: base.py  development.py
auth/server/database/account/: crud.py
auth/server/database/cache/: manager.py
auth/server/database/profile/: crud.py
auth/server/database/token/: crud.py
auth/server/database/user/: auth.py  sso.py  user.py
auth/server/migrations/: env.py
auth/server/migrations/versions/: 4420f206c636_db_v3.py  50300b575595_db_v7.py  703d92567259_db_v8.py  a876819efb5b_db_v2.py  a8dd6010a3c1_db_v6.py  bf32714a940c_db_v4.py  f176b0d41e75_db_v1.py  fa46cf0251ad_db_v5.py
auth/server/models/database/: __init__.py  acl.py  users.py
auth/server/models/schemas/base/: __init__.py  fields.py  users.py
auth/server/models/schemas/inc/: auth.py  profile.py
auth/server/routes/account/: v1.py
auth/server/routes/auth/: v1.py
auth/server/routes/profile/: v1.py
auth/server/routes/sso/: v1.py
auth/server/security/authentication/: hash.py  jwt.py  password.py  sso.py  token.py
auth/server/security/dependencies/: acl.py  clients.py  request.py
auth/server/templates/: index.html
auth/server/utils/: enums.py  exceptions.py  helper.py  html.py  middlewares.py  smtp.py
gateway/: Dockerfile  alembic.ini  pyproject.toml  requirements.txt
gateway/scripts/: export-dependencies.sh  migrate.sh
gateway/secrets/: README.md
gateway/server/: __init__.py  main.py
gateway/server/config/environments/: base.py  development.py  production.py  staging.py
gateway/server/connections/: __init__.py  clients.py
gateway/server/database/: cache.py
gateway/server/database/access_control/: create.py  delete.py  read.py  update.py
gateway/server/database/accounts/: create.py  read.py  update.py
gateway/server/database/applications/: create.py  delete.py  read.py  update.py
gateway/server/database/oauth/: auth.py
gateway/server/events/: auth.py  openapi.py  startup.py
gateway/server/migrations/: env.py  script.py.mako
gateway/server/migrations/versions/: 2734ba0461bf_db_v2.py  3506bcbfc785_db_v2.py  51c15a1a7f5d_db_v1.py  61cf86780fde_db_v1.py  64eb6a00b583_db_v1.py  fce8d296d1fc_db_v2.py
gateway/server/models/database/: __init__.py  accounts.py  acl.py  shops.py
gateway/server/models/schemas/: __init__.py
gateway/server/models/schemas/requests/: __init__.py  access_control.py  accounts.py  applications.py  auth.py  password.py
gateway/server/models/schemas/responses/: __init__.py  access_control.py  accounts.py  applications.py  auth.py
gateway/server/routes/: __init__.py
gateway/server/routes/access_control/: __init__.py  groups.py  permissions.py  roles.py
gateway/server/routes/accounts/: __init__.py  auth.py  email.py  password.py  sso.py
gateway/server/routes/applications/: __init__.py  apps.py  oauth.py
gateway/server/security/authentication/: hash.py  jwt.py  oauth.py  passlib.py  sso.py
gateway/server/security/dependencies/: acl.py  clients.py  requests.py
gateway/server/smtp/: config.py  tasks.py
gateway/server/templates/: activation.html  base.html  password-reset.html  styles.html  update-email.html
gateway/server/utils/: enums.py  exceptions.py  helpers.py  html.py
shop/: Dockerfile  logger.js  main.js  package.json
(+49 files in other folders)
